--- a/new/Beam/src/app/app.component.html
+++ b/new/Beam/src/app/app.component.html
@@ -17,7 +17,7 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-inverse navbar-fixed-left w-100" style="position: sticky"> 
+<nav class="navbar navbar-inverse navbar-fixed-left w-100"> 
 
   <ul class="nav navbar-nav" id="nav2">
     <li routerLinkActive="active-link" class="nav-item">
